gateway-api/deployment-gateway-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
  namespace: captcha
  labels:
    app: gateway-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      nodeSelector:
        pool-name: platform-pool
      volumes:
      - name: tz-seoul
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
      containers:
        - name: gateway-api
          image: kc-sfacspace.kr-central-2.kcr.dev/team1-repo/gateway-api:1666624e3e5f19a9d8f7332c84bdbdf56bcb551c
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tz-seoul
              mountPath: /etc/localtime
          resources:
            requests:
              memory: "16Gi"
              cpu: "5"
            limits:
              memory: "32Gi"
              cpu: "8"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: kcr-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-backend-service
  namespace: captcha
  labels:
    app: gateway-api
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
